crates/ffs-harness/tests/ui/executed_evidence_no_deserialize.stderr
error[E0277]: the trait bound `ffs_harness::executed_evidence::ExecutedEvidence: serde::Deserialize<'de>` is not satisfied
  --> tests/ui/executed_evidence_no_deserialize.rs:10:39
   |
10 |     let _evidence: ExecutedEvidence = serde_json::from_str(json).unwrap();
   |                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `serde_core::de::Deserialize<'_>` is not implemented for `ffs_harness::executed_evidence::ExecutedEvidence`
   |
   = note: for local types consider adding `#[derive(serde::Deserialize)]` to your `ffs_harness::executed_evidence::ExecutedEvidence` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `serde_core::de::Deserialize<'de>`:
             `&'a Path` implements `serde_core::de::Deserialize<'de>`
             `&'a [u8]` implements `serde_core::de::Deserialize<'de>`
             `&'a str` implements `serde_core::de::Deserialize<'de>`
             `()` implements `serde_core::de::Deserialize<'de>`
             `(T,)` implements `serde_core::de::Deserialize<'de>`
             `(T0, T1)` implements `serde_core::de::Deserialize<'de>`
             `(T0, T1, T2)` implements `serde_core::de::Deserialize<'de>`
             `(T0, T1, T2, T3)` implements `serde_core::de::Deserialize<'de>`
           and $N others
note: required by a bound in `serde_json::from_str`
  --> $CARGO/serde_json-$VERSION/src/de.rs
   |
   | pub fn from_str<'a, T>(s: &'a str) -> Result<T>
   |        -------- required by a bound in this function
   | where
   |     T: de::Deserialize<'a>,
   |        ^^^^^^^^^^^^^^^^^^^ required by this bound in `from_str`
